fix large gaps between cards on big screen

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -9,8 +9,13 @@
   }
 
   @media screen and (min-width: 1024px) {
+    & {
+      padding: 0 20%;
+    }
+
     &__list {
       grid-template-columns: repeat(4, 1fr);
+      justify-items: center;
     }
   }
 }
